--- a/index.html
+++ b/index.html
@@ -89,18 +89,18 @@
             <div class="container-main-columns clearfix">
                 
                 <div class="main-columns">
-                    <div class="left-col-image"></div>
-                    <h3>Piano formativo configurato sul proprio livello</h3>
+                    <div class="col-image left-col-image"></div>
+                    <h3 class="green-text">Piano formativo configurato sul proprio livello</h3>
                 </div>
 
                 <div class="main-columns">
-                    <div class="center-col-image"></div>
-                    <h3>Piano formativo configurato sul proprio livello</h3>
+                    <div class="col-image center-col-image"></div>
+                    <h3 class="green-text">Piano formativo configurato sul proprio livello</h3>
                 </div>
 
                 <div class="main-columns">
-                    <div class="right-col-image"></div>
-                    <h3>Piano formativo configurato sul proprio livello</h3>
+                    <div class="col-image right-col-image"></div>
+                    <h3 class="green-text">Piano formativo configurato sul proprio livello</h3>
                 </div>
 
             </div>
