--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
                 <div class="main-columns">
                     <div class="col-image left-col-image"></div>
                     <h3 class="green-text">Piano formativo configurato sul proprio livello</h3>
+                    <br>
+                    <hr>
+                    <br>
+                    <p class="grey-text col-text">Un metodo improntato sullo speaking con percorsi basati esattamente sulle esigenze personali dei partecipanti. Tutto parte da un accurato test di partenza per definire il livello e impostare gli obiettivi da raggiungere.</p>
+
                 </div>
 
                 <div class="main-columns">
