sistemato margin colonne main

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <!-- main columns  -->
         <section>
-            <div class="container-main-columns clearfix">
+            <div class="container clearfix">
                 
                 <div class="main-columns">
                     <div class="col-image left-col-image"></div>
@@ -99,7 +99,7 @@
 
                 </div>
 
-                <div class="main-columns">
+                <div class="main-columns columns-center-margin">
                     <div class="col-image center-col-image"></div>
                     <h3 class="green-text">Piano formativo configurato sul proprio livello</h3>
                 </div>
